Updates to the profile picture update - fixes actual uploading by adding API, implements picture view on all pages as well as fixes uploading from profile page that was not showing modal - fixes the profile image positioning problem too - Fixes #85

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -200,7 +200,7 @@ h1, h2, h3, h4, h5 {
 
 .profile .header .image {
     background-size: cover;
-    background-position: center;
+    background-position: center top;
     border: solid 5px #fff;
     border-radius: 92px;
     top: 10px;
